allow file uploads

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ application.security.jwt.expiration = ${JWT_EXPIRATION}
 # 30 * 24 * 60 * 60 * 1000 = 2,592,000,000 milliseconds
 application.security.jwt.refresh-token.expiration = ${JWT_REFRESH_TOKEN_EXPIRATION}
 # 7 * 24 * 60 * 60 * 1000 = 604,800,000 milliseconds
+
+#files
+spring.servlet.multipart.max-file-size = 1000MB
+spring.servlet.multipart.max-request-size = 1000MB
