--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = none
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
@@ -22,3 +22,12 @@ application.security.jwt.refresh-token.expiration = ${JWT_REFRESH_TOKEN_EXPIRATI
 #files
 spring.servlet.multipart.max-file-size = 1000MB
 spring.servlet.multipart.max-request-size = 1000MB
+
+#redis configuration
+spring.redis.host=localhost
+spring.redis.port=5040
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
+spring.cache.redis.time-to-live=40000
+#debug redis
+logging.level.org.springframework.data.redis=DEBUG
