spring admin server dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,19 @@ spring.cache.redis.cache-null-values=true
 spring.cache.redis.time-to-live=40000
 #debug redis
 logging.level.org.springframework.data.redis=DEBUG
+
+#spring.boot.admin.client.url=http://localhost:8040/admin
+#spring.boot.admin.client.management-url=http://bronyst:8040/actuator
+#spring.boot.admin.client.health-url=http://bronyst:8040/actuator/health
+#spring.boot.admin.client.service-url=http://bronyst:8040/
+#
+#spring.boot.admin.client.username=admin
+#spring.boot.admin.client.password=password
+#
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
+#management.security.enabled=false
+
+
+
+
