--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,5 @@ logging.level.org.springframework.data.redis=DEBUG
 #management.endpoint.health.show-details=always
 #management.security.enabled=false
 
-
-
-
+spring.application.admin.enabled = true
+spring.config.import=optional:file:.env
