create prod variables and make prod environment active

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,5 +47,5 @@ logging.level.org.springframework.data.redis=DEBUG
 
 spring.application.admin.enabled = true
 
-spring.profiles.active=${APP_ENV:dev}
+spring.profiles.active=${APP_ENV:prod}
 
