update railway database url and password

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
 # ? PostgreSQL Database (Railway Injects Environment Variables)
-spring.datasource.url=postgresql://postgres:TXClvgZdWhdGprhXlwjxPApLEjwyTSDB@postgres.railway.internal:5432/dreamwheels
+spring.datasource.url=postgresql://postgres:LfutoEGgremNFZJujocovgOZOtlFEtjX@switchback.proxy.rlwy.net:30314/railway
 spring.datasource.username=postgres
-spring.datasource.password=TXClvgZdWhdGprhXlwjxPApLEjwyTSDB
+spring.datasource.password=LfutoEGgremNFZJujocovgOZOtlFEtjX
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
