update railway database url by appending jdbc

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 # ? PostgreSQL Database (Railway Injects Environment Variables)
-spring.datasource.url=postgresql://postgres:LfutoEGgremNFZJujocovgOZOtlFEtjX@switchback.proxy.rlwy.net:30314/railway
+spring.datasource.url=jdbc:postgresql://switchback.proxy.rlwy.net:30314/railway
 spring.datasource.username=postgres
 spring.datasource.password=LfutoEGgremNFZJujocovgOZOtlFEtjX
 spring.datasource.driver-class-name=org.postgresql.Driver
