use correct database

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
 # ? PostgreSQL Database (Railway Injects Environment Variables)
-spring.datasource.url=jdbc:postgresql://switchback.proxy.rlwy.net:30314/railway
+spring.datasource.url=postgresql://postgres:jjZcwcVqvNRXNrpYNHNeRyZlbmxsbWCm@interchange.proxy.rlwy.net:32257/railway
 spring.datasource.username=postgres
-spring.datasource.password=LfutoEGgremNFZJujocovgOZOtlFEtjX
+spring.datasource.password=jjZcwcVqvNRXNrpYNHNeRyZlbmxsbWCm
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
