--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-APP_ENV=dev
+#APP_ENV=dev
 server.port = 8040
 
 #datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/dreamwheels
-spring.datasource.username=postgres
-spring.datasource.password=Corpdeets2021!
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
