eager fetch user garages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 server.port = 8040
 
 #datasource
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Datasource Configuration
+spring.datasource.url=${DATABASE_URL:${SPRING_DATASOURCE_URL}}
+spring.datasource.username=${POSTGRES_USER:${SPRING_DATASOURCE_USERNAME}}
+spring.datasource.password=${POSTGRES_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
@@ -46,4 +47,3 @@ logging.level.org.springframework.data.redis=DEBUG
 #management.security.enabled=false
 
 spring.application.admin.enabled = true
-
