manually trigger flyway migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
 
+spring.flyway.enabled=false
+
+
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
