--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.datasource.url=${DATABASE_URL:${SPRING_DATASOURCE_URL}}
 spring.datasource.username=${POSTGRES_USER:${SPRING_DATASOURCE_USERNAME}}
 spring.datasource.password=${POSTGRES_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
 
-spring.flyway.enabled=false
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
