--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
 
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
+#spring.flyway.baseline-on-migrate=true
 
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
