--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,14 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
 
-spring.flyway.enabled=false
-#spring.flyway.baseline-on-migrate=true
-
+# flyway  configuration
+spring.flyway.locations=classpath:db/migration
+# Ensure Flyway runs on an empty DB
+spring.flyway.baseline-on-migrate=true
+# Check if scripts are valid before running
+spring.flyway.validate-on-migrate=true
+# Only use in development!
+spring.flyway.clean-on-validation-error=true
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
