--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.username=${POSTGRES_USER:${SPRING_DATASOURCE_USERNAME}}
 spring.datasource.password=${POSTGRES_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql = true
 
-# flyway  configuration
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 # Ensure Flyway runs on an empty DB
 spring.flyway.baseline-on-migrate=true
