--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=${POSTGRES_USER:${SPRING_DATASOURCE_USERNAME}}
 spring.datasource.password=${POSTGRES_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
 
 spring.flyway.enabled=false
