--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,22 +3,21 @@ server.port = 8040
 
 #datasource
 # Datasource Configuration
-spring.datasource.url=${DATABASE_URL:${SPRING_DATASOURCE_URL}}
+spring.datasource.url=jdbc:${DATABASE_URL:${SPRING_DATASOURCE_URL}}
 spring.datasource.username=${POSTGRES_USER:${SPRING_DATASOURCE_USERNAME}}
 spring.datasource.password=${POSTGRES_PASSWORD:${SPRING_DATASOURCE_PASSWORD}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql = true
 
-spring.flyway.enabled=false
-#spring.flyway.locations=classpath:db/migration
-## Ensure Flyway runs on an empty DB
-#spring.flyway.baseline-on-migrate=true
-## Check if scripts are valid before running
-#spring.flyway.validate-on-migrate=true
-## Only use in development!
-#spring.flyway.clean-on-validation-error=true
+spring.flyway.locations=classpath:db/migration
+# Ensure Flyway runs on an empty DB
+spring.flyway.baseline-on-migrate=true
+# Check if scripts are valid before running
+spring.flyway.validate-on-migrate=true
+# Only use in development!
+spring.flyway.clean-on-validation-error=true
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
